compiler/src/test/resources/amyc/typer/passing/SeqWithError.amy
module SeqWithError
  val x: Int = (1 + 2; error("this is fine"));
  x
end SeqWithError
