compiler/src/test/resources/amyc/typer/failing/MatchError2.amy
module MatchError
  val x: Int = 1 match { case 2 => "" }; x
end MatchError
